# K-Radar

./: README.md  main_cond_0.py  main_cond_0_args.py  main_fusion_eval_0.py  main_labeling.py  main_test_0.py  main_train_0.py  main_vis.py  readme.md  requirements.txt
configs/: A2F_v2_0_final.yml  A2F_v2_0_final_wo_SCL.yml  SpikingRTNH.yml  SpikingRTNH_BTI.yml  cfg_CAMERA_MODEL_Base.yml  cfg_GUI_TOOL.yml  cfg_PVRCNNPP.yml  cfg_RTNH.yml  cfg_RTNHP.yml  cfg_RTNH_wide.yml  cfg_SECOND.yml  config_general.py  config_ui.py
configs/sparse_rdr_data_generation/: cfg_gen_wider_rtnh_10p.yml
configs/v1_0/: cfg_A2F_scl_final.yml  cfg_ASF_final.yml  cfg_CAMERA_MODEL_Base.yml  cfg_RTNH.yml  cfg_SECOND.yml
datasets/: __init__.py  kradar_detection_v1_0.py  kradar_detection_v1_1.py  kradar_detection_v2_0.py  kradar_detection_v2_1.py  kradar_fusion_v1_0.py  kradar_fusion_v1_0_calib_change.py  kradar_odometry_v1_0.py  kradar_tracking_v1_0.py
docs/: a_dataset_generation.md  calibration.md  dataset.md  dataset_generation.md  detection.md  hailo.md  labeling  labeling.md  odometry.md  preprocessing.md  related_datasets.md  sensor_fusion.md  snn.md  synthesizer.md  tracking.md  uniqueness.md
models/backbone_2d/: __init__.py  base_bev_backbone.py  generalized_lss.py  image_backbone.py  pillars_backbone.py  resnet_wrapper.py
models/backbone_2d/map_to_bev/: __init__.py
models/backbone_3d/: __init__.py  rdr_sp_dop.py  rdr_sp_filt_backbone.py  rdr_sp_pw.py  spconv_backbone.py
models/backbone_3d/pfe/: voxel_set_abstraction.py
models/fuser/: __init__.py  a2_fusion.py
models/head/: __init__.py  anchor_head.py  anchor_head_integrated.py  center_head.py  ldr_pillars_head.py  point_head_simple.py  point_head_template.py  rdr_filt_srt_head.py  rdr_spcube_head.py  rdr_spcube_head_multi_cls.py
models/model_utils/: model_nms_utils.py
models/pre_processor/: __init__.py  rdr_filt_processor.py  rdr_polar_processor.py  rdr_sparse_processor.py  rdr_sparse_processor_dop.py
models/roi_head/: __init__.py  pvrcnn_head.py  roi_head_template.py
models/skeletons/: __init__.py  cam_base.py  fusion_base.py  fusion_base_integrated.py  ldr_base.py  pvrcnn_pp.py  rdr_base.py  second_net.py  spiking_rtnh.py
models/voxel_encoder/: __init__.py  mean_vfe.py
ops/: setup.py
ops/iou3d_nms/: iou3d_nms_utils.py
ops/roiaware_pool3d/: roiaware_pool3d_utils.py
pipelines/: pipeline_detection_v1_0.py
resources/: arr_doppler.mat
resources/imgs/: label_example.txt
resources/odometry/: seq_1_local.csv
resources/pickle/: pre_idx.pickle  pre_mask.pickle  pre_ra.pickle
resources/split/: test.txt  train.txt
tools/asf_visualization/: main_get_rendered_video_cam.py  main_get_rendered_video_lid.py  main_get_rendered_video_rad.py  main_get_rendered_video_sam.py  main_get_videos.py
tools/bag_decoder_ros/src/: CMakeLists.txt  bag_decoder.cpp  package.xml
tools/bag_decoder_ros_gps/src/bag_decoder/: CMakeLists.txt  package.xml
tools/bag_decoder_ros_gps/src/bag_decoder/src/: bag_decoder_gps_imu.cpp
tools/bag_decoder_ros_gps/src/piksi_rtk_msgs/: CMakeLists.txt  package.xml
tools/bag_decoder_ros_gps/src/piksi_rtk_msgs/msg/: AgeOfCorrections.msg  BasePosEcef.msg  BasePosLlh.msg  BaselineEcef.msg  BaselineHeading.msg  BaselineNed.msg  DeviceMonitor_V2_3_15.msg  Dops.msg  DopsMulti.msg  ExtEvent.msg  GpsTime.msg  GpsTimeMulti.msg  Heartbeat.msg  ImuAuxMulti.msg  ImuRawMulti.msg  InfoWifiCorrections.msg  Log.msg  MagRaw.msg  MeasurementState_V2_4_1.msg  Observation.msg  PosEcef.msg  PosEcefCov.msg  PosLlh.msg  PosLlhCov.msg  PosLlhMulti.msg  PositionWithCovariance.msg  PositionWithCovarianceStamped.msg  ReceiverState.msg  ReceiverState_V2_2_15.msg  ReceiverState_V2_3_15.msg  ReceiverState_V2_4_1.msg  TrackingState.msg  TrackingState_V2_2_15.msg  TrackingState_V2_3_15.msg  TrackingState_V2_6_3.msg  UartState.msg  UartState_V2_3_15.msg  UtcTimeMulti.msg  VelEcef.msg  VelEcefCov.msg  (+4 more)
tools/bag_decoder_ros_gps/src/piksi_rtk_msgs/srv/: SettingsReadReq.srv  SettingsReadResp.srv  SettingsWrite.srv
tools/cfar_utils/: CFAR.py  dataset_CFAR.py
tools/data_converter/: mat_to_pickle.py
tools/eval_checker/: check_evaluation_with_bbox.py  check_evaluation_with_label.py
tools/get_1st_points/: ind_00033.npy  main_get_1st_points.py  show_point_cloud_from_npy.m
tools/get_doppler_for_rdr_sparse/: main_get_doppler_points_for_rdr_sparse.py
tools/label_dist/: label_dist.py
tools/label_matcher/: label_matcher.py
tools/mfiles/: gen.m  gen_1_load_data.m  gen_2_get_tesseract.m  gen_3_get_zyx_cube.m  gen_4_get_bev_img.m  gen_5_get_pc_img.m  gen_doppler_ubuntu.m  gen_temp.m  generate_data_from_bin_and_bag.m  get_lidar_files.m  info_arr.mat
tools/move_files/: copy_folders_to_folder.py  copy_sequence_to_ssd.py
tools/movie_maker/: main_inference_maker.py  main_save_lidar_frames_bev.py  main_save_radar_frames_bev.py  main_save_rendered_frames.py
tools/polar3d_checker/: main_polar3d_checker.py
tools/process_all_imgs/: main_process_all_imgs_for_sequential_encoding.py
tools/radar_film/: get_objs_from_lidar.py  get_pw_dist.py  pw_dist.pickle  targ_obj.pickle
tools/revise_label/: cfg_RTNH_refined.yml  cfg_RTNH_refined_label_revisor.yml  get_distribution.py  revise_label.py
tools/tag_generator/: tag_generation.py
tools/train_test_splitter/: train_test_splitter.py
tools/vis_examples/: radar_preprocessor.py  radar_preprocessor_utils.py  radar_preprocessor_w_azimuth_sampled.py
tools/vis_tracking/: main_vis_tracking.py
tools/vision_models/: test_8x_models.py  test_mobile.py  test_resnet.py  test_swint.py
uis/: ui_calibration.py  ui_labeling.py  ui_labeling.ui  ui_vis.py  ui_vis.ui
utils/: box_coder_utils.py  box_utils.py  common_utils.py  loss_utils.py  util_calib.py  util_cfar.py  util_config.py  util_dataset.py  util_geometry.py  util_odometry.py  util_pipeline.py  util_point_cloud.py  util_ui_labeling.py  util_ui_vis.py
utils/Rotated_IoU/: box_intersection_2d.py  min_enclosing_box.py  oriented_iou_loss.py
utils/kitti_eval/: eval.py  eval_python.py  eval_revised.py  nms_gpu.py
(+226 files in other folders)
